Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-4591

Kudu client error memory should be bounded

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.8.0
    • Impala 2.11.0
    • Backend

    Description

      Kudu client memory needs to be tracked by Impala. A short-term solution was added in IMPALA-4478 to TryConsume a reasonably large amount of memory. This helps avoid OOM issues, but the client could still consume unbounded memory for error handling.

      https://issues.apache.org/jira/browse/KUDU-1752 added support in the Kudu client for bounding the error memory size. Impala should set this.

      Attachments

        Issue Links

          Activity

            People

              twmarshall Thomas Tauber-Marshall
              mjacobs Matthew Jacobs
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: